# SimpleShell

./: .gitignore  CMakeLists.txt  README.md  exec_test.c  main.c  shell.c  shell_alias.c  shell_alias.h  shell_commands.c  shell_commands.h  shell_external.c  shell_external.h  shell_history.c  shell_history.h  shell_input.c  shell_input.h
